# autoresearch-hack

./: .env.example  .gitignore  DESIGN.md  README.md  meta.py  modal_app.py  pyproject.toml
ar/: entrypoint.py  test_entrypoint.py
docs/: _fig1.html  ar-optimization.html  architecture.html  diagrams.html  lineage.html
envs/: __init__.py  base.py  conftest.py  matmul.py  nanochat.py  nanochat_eval.py  pools.py  test_base.py  test_matmul.py  test_nanochat.py
harness/: README.md  __init__.py  __main__.py  contracts.py  executor.py  schema.py
infra/: __init__.py  collector.py
inner-loop/domains/gpu/kernelbench/: autoresearch_loop.py  baselines_NVIDIA_H200_level1.json  eval_submission.py  example_triton_matmul.py  pyproject.toml  run_baselines.py  run_rollouts.sh
obs/: __init__.py  dashboard.py  events.py  metrics.py  run_index.py  test_dashboard.py
prime_research/: README.md  __init__.py  config.py  contracts.py  domains.py  inner_loop.py  modal_app.py  program.py  prompts.py  runner.py
proof/: DECISIONS.md  DESIGN.md  FINDINGS.md  HANDOFF.md  README.md  verifiers-structured-env-audit.md
scripts/: README.md  analyze_run.py  clean_stale_runs.sh  local_meta_outer_loop.sh  modal_codex_gpu.sh  modal_codex_outer_loop.sh  modal_cuda_oxide.sh  modal_outer_loop_smoke.sh  modal_smoke.sh  modal_workshop_ngrok.sh  noop_agent.sh  noop_mutate.sh  raindrop_codex_exec.sh  reload_run_to_workshop.py  run_k3_e2e.sh  run_k3_modal_e2e.sh  sanity_check_transcripts.py  workshop_codex_smoke.sh  workshop_ngrok.sh
smoke/: e2e_matmul.py
tasks/: kernelbench_triton.yaml  (+2 more)
(+117 files in other folders)
