[project]
name = "kernelbench"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.6.0+cu124",
    "triton==3.2.0",
    "numpy",
    "setuptools",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
